<resources>
    <string name="app_name">Welcome to MonashFriendFinder</string>


    <string name="content_home">this is home fragment</string>
    <string name="content_search"> Search for new friends</string>
    <string name="content_my">this is my fragment</string>

    <string name="search_first_name">First Name</string>
    <string name="search_surname">Surname</string>
    <string name="search_birthday">Birthday</string>
    <string name="search_gender">Gender</string>
    <string name="search_course">Course</string>
    <string name="search_study_mode">Study Mode</string>
    <string name="search_address">Address</string>
    <string name="search_suburb">Suburb</string>
    <string name="search_nationality">Nationality</string>
    <string name="search_native_language">Native Language</string>
    <string name="search_favourite_sport">Favourite Sport</string>
    <string name="search_favourite_movie">Favourite Movie</string>
    <string name="search_favourite_unit">Favourite Unit</string>
    <string name="search_current_job">Current Job</string>

    <string name="search_whatever">whatever</string>
    <string name="search_search">search!</string>
    <string name="search_hint"> select multiple matching attributes and view a list of other students who meet these criteria with their information </string>

    <string name="add_new_friend">add as a new friend</string>

    <string name="apply_friend">add</string>
    <string name="more_detail">details</string>

    <string name="my_change">change</string>

    <string name="my_friend_button">my friend list</string>

    <string name="my_studentid">Student Id</string>
    <string name="profile_password">password</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_edit">Profile updating</string>
    <string name="profile_changed">Done</string>

    <string name="search_result_button">show on map</string>
    <string name="found_no_new_friend"> Sorry, there is no person has those same attributes with you</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="forget_pwd">Forget Password？</string>
    <string name="account">ID:</string>
    <string name="pwd">Psw</string>
    <string name="reset">modify the password</string>
    <string name="exit">safely exit</string>
    <string name="accountEdittext">ID/Email/Phone number</string>


    <string name="home_data">data</string>
    <string name="home_location">SuZhou</string>
    <string name="home_temperature">Sunny day 16 deg</string>
    <string name="home_wind">Wind: Northeast level 4</string>
</resources>
