<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bar"
        android:padding="10dp"
        android:text="@string/content_search"
        android:textColor="@color/released"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/bb_default_elevation">


                <CheckBox
                    android:id="@+id/search_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_first_name"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_birthday"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_course"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_course"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_address"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_address"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_nationality"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_favourite_sport"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_favourite_sport"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_favourite_unit"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_favourite_unit"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/search_surname"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_surname"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_gender"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_gender"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_study_mode"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_study_mode"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_suburb"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_suburb"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_native_language"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_native_language"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_favourite_movie"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_favourite_movie"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/search_current_job"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/search_current_job"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingLeft="@dimen/bb_default_elevation"
        android:paddingTop="5dp"
        android:paddingRight="@dimen/bb_default_elevation"
        android:text="@string/search_hint"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_search"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />


</LinearLayout>