<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_bar"
        android:padding="10dp"
        android:text="@string/profile_edit"
        android:textColor="@color/bb_darkBackgroundColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:paddingStart="@dimen/bb_default_elevation">

            <TextView
                android:id="@+id/profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_first_name"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_surname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_surname"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_birthday"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_birthday"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_gender"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_gender"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_course"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_course"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_study_mode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_study_mode"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_address"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_suburb"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_suburb"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_nationality"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_nationality"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_native_language"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_native_language"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_favourite_sport"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_favourite_sport"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_favourite_movie"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_favourite_movie"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_favourite_unit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_favourite_unit"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_current_job"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/search_current_job"
                android:textColor="@color/bb_darkBackgroundColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/profile_edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="date" />

            <Spinner
                android:id="@+id/profile_edit_gender"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/search_edit_gender"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/profile_edit_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/profile_edit_study_mode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/search_edit_study_mode"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/profile_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_suburb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_nationality"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <EditText
                android:id="@+id/profile_edit_native_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_favourite_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_favourite_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_favourite_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/profile_edit_current_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_whatever"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_changed"
        android:textColor="@color/colorPrimary" />
</LinearLayout>